// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDescriptiveFormRow is rendered 1`] = `
<div
  aria-label="aria-label"
  aria-labelledby="generated-id-legend"
  className="euiDescriptiveFormRow testClass1 testClass2"
  data-test-subj="test subject string"
  id="generated-id"
  role="group"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
      id="generated-id-legend"
    >
      <EuiText
        className="euiDescriptiveFormRow__title"
        grow={true}
        id="generated-id-title"
        size="xs"
      >
        Title
      </EuiText>
      <EuiText
        className="euiDescriptiveFormRow__description"
        color="subdued"
        grow={true}
        id="generated-id-description"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fields--paddingMedium"
      component="div"
      grow={true}
    >
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescriptiveFormRow props fullWidth is rendered 1`] = `
<div
  aria-label="aria-label"
  aria-labelledby="generated-id-legend"
  className="euiDescriptiveFormRow euiDescriptiveFormRow--fullWidth testClass1 testClass2"
  data-test-subj="test subject string"
  id="generated-id"
  role="group"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
      id="generated-id-legend"
    >
      <EuiText
        className="euiDescriptiveFormRow__title"
        grow={true}
        id="generated-id-title"
        size="xs"
      >
        Title
      </EuiText>
      <EuiText
        className="euiDescriptiveFormRow__description"
        color="subdued"
        grow={true}
        id="generated-id-description"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fields--paddingMedium"
      component="div"
      grow={true}
    >
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={true}
        hasEmptyLabelSpace={false}
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescriptiveFormRow props gutterSize is rendered 1`] = `
<div
  aria-label="aria-label"
  aria-labelledby="generated-id-legend"
  className="euiDescriptiveFormRow testClass1 testClass2"
  data-test-subj="test subject string"
  id="generated-id"
  role="group"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="s"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
      id="generated-id-legend"
    >
      <EuiText
        className="euiDescriptiveFormRow__title"
        grow={true}
        id="generated-id-title"
        size="xs"
      >
        Title
      </EuiText>
      <EuiText
        className="euiDescriptiveFormRow__description"
        color="subdued"
        grow={true}
        id="generated-id-description"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fields--paddingMedium"
      component="div"
      grow={true}
    >
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescriptiveFormRow props id is rendered 1`] = `
<div
  aria-label="aria-label"
  aria-labelledby="test-id-legend"
  className="euiDescriptiveFormRow testClass1 testClass2"
  data-test-subj="test subject string"
  id="test-id"
  role="group"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
      id="test-id-legend"
    >
      <EuiText
        className="euiDescriptiveFormRow__title"
        grow={true}
        id="test-id-title"
        size="xs"
      >
        Title
      </EuiText>
      <EuiText
        className="euiDescriptiveFormRow__description"
        color="subdued"
        grow={true}
        id="test-id-description"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fields--paddingMedium"
      component="div"
      grow={true}
    >
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescriptiveFormRow props paddingSize is rendered 1`] = `
<div
  aria-label="aria-label"
  aria-labelledby="generated-id-legend"
  className="euiDescriptiveFormRow testClass1 testClass2"
  data-test-subj="test subject string"
  id="generated-id"
  role="group"
>
  <EuiFlexGroup
    alignItems="stretch"
    component="div"
    direction="row"
    gutterSize="l"
    justifyContent="flexStart"
    responsive={true}
    wrap={false}
  >
    <EuiFlexItem
      component="div"
      grow={false}
      id="generated-id-legend"
    >
      <EuiText
        className="euiDescriptiveFormRow__title"
        grow={true}
        id="generated-id-title"
        size="xs"
      >
        Title
      </EuiText>
      <EuiText
        className="euiDescriptiveFormRow__description"
        color="subdued"
        grow={true}
        id="generated-id-description"
        size="s"
      >
        Test description
      </EuiText>
    </EuiFlexItem>
    <EuiFlexItem
      className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fields--paddingLarge"
      component="div"
      grow={true}
    >
      <EuiFormRow
        describedByIds={Array []}
        fullWidth={false}
        hasEmptyLabelSpace={false}
      >
        <input />
      </EuiFormRow>
    </EuiFlexItem>
  </EuiFlexGroup>
</div>
`;

exports[`EuiDescriptiveFormRow ties together parts for accessibility 1`] = `
<EuiDescriptiveFormRow
  aria-label="aria-label"
  className="testClass1 testClass2"
  data-test-subj="test subject string"
  description="Test description"
  fullWidth={false}
  gutterSize="l"
  id="test-id"
  paddingSize="m"
  title="Title"
>
  <div
    aria-label="aria-label"
    aria-labelledby="test-id-legend"
    className="euiDescriptiveFormRow testClass1 testClass2"
    data-test-subj="test subject string"
    id="test-id"
    role="group"
  >
    <EuiFlexGroup
      alignItems="stretch"
      component="div"
      direction="row"
      gutterSize="l"
      justifyContent="flexStart"
      responsive={true}
      wrap={false}
    >
      <div
        className="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionRow euiFlexGroup--responsive"
      >
        <EuiFlexItem
          component="div"
          grow={false}
          id="test-id-legend"
        >
          <div
            className="euiFlexItem euiFlexItem--flexGrowZero"
            id="test-id-legend"
          >
            <EuiText
              className="euiDescriptiveFormRow__title"
              grow={true}
              id="test-id-title"
              size="xs"
            >
              <div
                className="euiText euiText--extraSmall euiDescriptiveFormRow__title"
                id="test-id-title"
              >
                Title
              </div>
            </EuiText>
            <EuiText
              className="euiDescriptiveFormRow__description"
              color="subdued"
              grow={true}
              id="test-id-description"
              size="s"
            >
              <div
                className="euiText euiText--small euiDescriptiveFormRow__description"
                id="test-id-description"
              >
                <EuiTextColor
                  color="subdued"
                >
                  <span
                    className="euiTextColor euiTextColor--subdued"
                  >
                    Test description
                  </span>
                </EuiTextColor>
              </div>
            </EuiText>
          </div>
        </EuiFlexItem>
        <EuiFlexItem
          className="euiDescriptiveFormRow__fields euiDescriptiveFormRow__fields--paddingMedium"
          component="div"
          grow={true}
        >
          <div
            className="euiFlexItem euiDescriptiveFormRow__fields euiDescriptiveFormRow__fields--paddingMedium"
          >
            <EuiFormRow
              describedByIds={
                Array [
                  "test-id-description",
                ]
              }
              error={
                Array [
                  "Error one",
                  "Error two",
                ]
              }
              fullWidth={false}
              hasEmptyLabelSpace={false}
              helpText="Help text"
              isInvalid={true}
              label="Label"
            >
              <div
                className="euiFormRow"
                id="generated-id-row"
              >
                <EuiFormLabel
                  htmlFor="generated-id"
                  isFocused={false}
                  isInvalid={true}
                >
                  <label
                    className="euiFormLabel euiFormLabel-isInvalid"
                    htmlFor="generated-id"
                  >
                    Label
                  </label>
                </EuiFormLabel>
                <input
                  aria-describedby="test-id-description generated-id-help generated-id-error-0 generated-id-error-1"
                  id="generated-id"
                  onBlur={[Function]}
                  onFocus={[Function]}
                />
                <EuiFormErrorText
                  className="euiFormRow__text"
                  id="generated-id-error-0"
                  key="Error one"
                >
                  <div
                    className="euiFormErrorText euiFormRow__text"
                    id="generated-id-error-0"
                  >
                    Error one
                  </div>
                </EuiFormErrorText>
                <EuiFormErrorText
                  className="euiFormRow__text"
                  id="generated-id-error-1"
                  key="Error two"
                >
                  <div
                    className="euiFormErrorText euiFormRow__text"
                    id="generated-id-error-1"
                  >
                    Error two
                  </div>
                </EuiFormErrorText>
                <EuiFormHelpText
                  className="euiFormRow__text"
                  id="generated-id-help"
                >
                  <div
                    className="euiFormHelpText euiFormRow__text"
                    id="generated-id-help"
                  >
                    Help text
                  </div>
                </EuiFormHelpText>
              </div>
            </EuiFormRow>
          </div>
        </EuiFlexItem>
      </div>
    </EuiFlexGroup>
  </div>
</EuiDescriptiveFormRow>
`;
